--- a/search.html
+++ b/search.html
@@ -89,20 +89,16 @@
       });
     </script>
     <a href=""><img style="float: center; margin-right: 16px; margin-top: 12px;width:180px;height:40px; border-radius:10px;object-fit: cover" src="HomeImages/icon.png"></a>
-<form class="search-bar">
-  <input type="text" id="search-input-desktop" name="query" />
-  <button id="search-icon">Search</button>
-</form>
-
-<form id="search-menu">
-  <input type="text" id="search-input-mobile" name="query" />
-  <button id="search-icon">Search</button>
-</form>
+<div id="search-menu"><div class="search-item">
+<form action="search.html" method="GET" class="search-bar" id="mobile-search-form">
+  <input type="text" name="query" placeholder="&#x1F50E;&#xFE0E; Search..." required>
+  <button type="submit">Search</button>
+</form></div></div>
     <div id="search-toggle" style="font-size: x-large">&#x1F50E;&#xFE0E;</div>
     <script>
       var searchToggle = document.getElementById("search-toggle");
       var searchMenu = document.getElementById("search-menu");
-
+      
       searchToggle.addEventListener("click", function() {
         searchMenu.classList.toggle("active");
         document.body.classList.toggle('overflow-hidden');
