--- a/Home.html
+++ b/Home.html
@@ -11,7 +11,9 @@
     <meta property="og:title" content="Homepage of pyblog">
     <meta property="og:description" content="Only the best blogs can be found here">
     <meta property="og:image" content="https://pyblog.ddns.net/HomeImages/icon.png">
-    
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen and (min-width: 769px)" />
+    <link rel="stylesheet" type="text/css" href="style-mobile.css" media="screen and (max-width: 768px)" />
+  
   </head>
   <header>
   </header>
