--- a/Blogs/Types-Of-Modules-And-Using-Them.html
+++ b/Blogs/Types-Of-Modules-And-Using-Them.html
@@ -18,7 +18,7 @@
         height: auto;
         border-radius: 5px;
         object-fit: cover;
-        scale: 0.95%;
+        max-width: 90%;
       }
 
        pre {
