--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <title>Redirecting... | PyBlog</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+    crossorigin="anonymous"></script>
     <link rel="HomeImages/icon" type="image/x-HomeImages/icon" href="HomeImages/icon.ico">
     <style>
 
