--- a/Home.html
+++ b/Home.html
@@ -126,6 +126,12 @@
           Creating A Minecraft Clone With Ursina
         </b></p>
       </div>
+      <div class="grid-item" onclick="window.location.href='Blogs/Making-Web-Games-With-Taptapir'" style="cursor: pointer;">
+        <img src="Blogs/home-page-images/Web-Games-Taptapir.webp" class="blog-img" alt="Taptapir">
+        <p><b>
+          Making Web Games With Taptapir
+        </b></p>
+      </div>
     </div><br>
     <p id="tableNumber" class="pageNumber">1/3</p><br>
     <button onclick="toggleElementsBack()" class="button" style="padding-left: 10%; padding-right: 10%; padding-top: 10px; padding-bottom: 10px; cursor: pointer;">&lt;</button>
